# rmcp-mailer

./: .gitignore  Cargo.toml  LICENSE  README.md  log4rs.yaml
src/: config.rs  database.rs  error.rs  logging.rs  mailer.rs  main.rs  request.rs  service.rs
src/database/: email_record.rs  event.rs  event_attendee.rs  group.rs  mod.rs  recipient.rs  recipient_email_record.rs  recipient_group.rs  schema.rs  template.rs
src/model/: email_record.rs  event.rs  event_attendee.rs  group.rs  mod.rs  recipient.rs  recipient_email_record.rs  recipient_group.rs  template.rs
