[package]
name = "rmcp-mailer"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11.15", features = ["tokio1", "tokio1-native-tls"]}
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main",  features = ["server", "transport-sse-server"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
toml = "0.8.22"